bug优化